fixed spacing issues

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -113,7 +113,7 @@ body{
     margin-top: 30px;
     margin-left: 20px;
     font-weight: 100;
-    font-size: 1.25em;
+    font-size: 1em;
 }
 
 .fav-icon{
